--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,12 @@
 baseURL = "http://example.com/"
 languageCode = "en-us"
-title = "Real Job site"
+title = "Job Ready Skills"
 theme = "minimal"
 disqusShortname = "username" # delete this to disable disqus comments
 googleAnalytics = ""
 
 [params]
     author = "Ramakrishna Gurram"
-    description = "Personal blog theme powered by Hugo"
     githubUsername = "#"
     accent = "red"
     showBorder = true
@@ -23,26 +22,31 @@ googleAnalytics = ""
     weight = 1
 
 [[menu.main]]
-    url = "/about/"
-    name = "About"
+    url = "/training/"
+    name = "Training"
     weight = 2
 
 [[menu.main]]
-    url = "/post/"
-    name = "Posts"
+    url = "/placements/"
+    name = "Placements"
     weight = 3
 
 [[menu.main]]
-    url = "/project/"
-    name = "Projects"
+    url = "/about/"
+    name = "About Us"
     weight = 4
+
+[[menu.main]]
+    url = "/contact/"
+    name = "Contact"
+    weight = 5
 
 # Social icons to be shown on the right-hand side of the navigation bar.
 # The "name" field should match the name of the icon in Font Awesome.
 # The list of available icons can be found at http://fontawesome.io/icons.
 
 [[menu.icon]]
-    url = "mailto:me@example.com"
+    url = "mailto:info@jobreadyskills.com"
     name = "envelope-o"
     weight = 1
 
